# llama.cpp

./: .gitmodules  llama.cpp  llama.h
common/: common.cpp  common.h
examples/: CMakeLists.txt
examples/batched-bench/: batched-bench.cpp
examples/llama-with-vineyard/: CMakeLists.txt  llama-with-vineyard.cpp  prompts.txt  readme.md
examples/parallel-speculative/: CMakeLists.txt  README.md  parallel-speculative.cpp
examples/prefill-dump/: CMakeLists.txt  prefill-dump.cpp  prefill-load.cpp
examples/suri/: CMakeLists.txt  README.md  suri.cpp
